ListView replaced with RecyclerView

--- a/app/src/main/res/layout/activity_quotes.xml
+++ b/app/src/main/res/layout/activity_quotes.xml
@@ -20,12 +20,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/quotesListView"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/quotesRecyclerView"
+            android:scrollbars="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_above="@+id/adView"
-            android:divider="@null"/>
+            android:layout_above="@+id/adView" />
 
         <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
