--- a/app/src/main/res/layout-sw720dp/activity_quotes.xml
+++ b/app/src/main/res/layout-sw720dp/activity_quotes.xml
@@ -20,8 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ListView
-            android:id="@+id/quotesListView"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/quotesRecyclerView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:paddingLeft="80dp"
