--- a/app/src/main/res/layout-sw720dp/activity_quotes.xml
+++ b/app/src/main/res/layout-sw720dp/activity_quotes.xml
@@ -22,6 +22,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/quotesRecyclerView"
+            android:scrollbars="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:paddingLeft="80dp"
