--- a/app/src/main/res/layout-sw720dp/fragment_ce_category.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_ce_category.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent" android:id="@+id/categoryContent" >
-
-    <ListView
-        android:id="@+id/categoryListView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:paddingLeft="80dp"
-        android:paddingRight="80dp"
-        android:divider="@android:color/transparent">
-    </ListView>
-</RelativeLayout>
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/categoryRecyclerView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:divider="@android:color/transparent"
+    android:paddingLeft="80dp"
+    android:paddingRight="80dp"
+    android:scrollbars="vertical" />
