--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -19,6 +19,10 @@
             android:key="pref_key_animation"
             android:summary="@string/preference_animation_long"
             android:title="@string/pref_key_animation" />
+        <CheckBoxPreference
+            android:key="pref_key_notifications"
+            android:summary="@string/preference_notification_summary"
+            android:title="@string/preference_notifications_title" />
     </PreferenceCategory>
     <PreferenceCategory
         android:key="pref_key_about"
