--- a/app/src/main/res/layout/fragment_ce_category.xml
+++ b/app/src/main/res/layout/fragment_ce_category.xml
@@ -3,5 +3,6 @@
     android:id="@+id/categoryRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="5dp"
     android:divider="@android:color/transparent"
     android:scrollbars="vertical" />
