--- a/app/src/main/res/layout-sw720dp/fragment_categories_first.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_categories_first.xml
@@ -16,8 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:textColor="@color/grey"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp" />
+            android:padding="4dp" />
 
     </android.support.v4.view.ViewPager>
 
