--- a/app/src/main/res/layout-sw720dp/fragment_programmed_tweets.xml
+++ b/app/src/main/res/layout-sw720dp/fragment_programmed_tweets.xml
@@ -4,8 +4,6 @@
     android:layout_height="match_parent"
     android:background="@color/fragment_background"
     android:orientation="vertical"
-    android:paddingLeft="100dp"
-    android:paddingRight="100dp"
     tools:context="com.andreapivetta.tweetbooster.fragments.ProgrammedTweetsFragment">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -15,11 +13,16 @@
         android:layout_weight="2"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         card_view:cardCornerRadius="4dp">
 
         <FrameLayout
             android:id="@+id/calendar_container_frame_layout"
-            android:layout_margin="20dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
@@ -29,6 +32,8 @@
         android:id="@+id/tweetsPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:paddingLeft="150dp"
+        android:paddingRight="150dp"/>
 
 </LinearLayout>
