--- a/app/src/main/res/layout-sw720dp/source_row.xml
+++ b/app/src/main/res/layout-sw720dp/source_row.xml
@@ -2,12 +2,12 @@
 <Button xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/categoryButton"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:layout_marginLeft="30dp"
     android:layout_marginRight="30dp"
-    android:layout_marginTop="7dp"
-    android:layout_marginBottom="7dp"
+    android:layout_marginTop="11dp"
+    android:layout_marginBottom="11dp"
     android:background="@drawable/category_button_background"
     android:textSize="22sp" />
